[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-security-bench"
version = "0.7.0"
description = "Benchmark autonomous agents against prompt injection, tool misuse, exfiltration, and persistence attacks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
agent-security-bench = "agent_security_bench.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
